<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/start_game"
            android:textSize="20sp"
            android:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/howToPlayButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/how_to_play"
            android:textSize="20sp"
            android:backgroundTint="@color/colorAccent" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/game_settings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/exit_game"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
