<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- 游戏画布 -->
    <SurfaceView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 游戏UI叠加层 -->
    <LinearLayout
        android:id="@+id/gameUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#80000000">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/level"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/livesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lives"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="end" />

    </LinearLayout>

    <!-- 暂停按钮 -->
    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/pause"
        android:backgroundTint="@color/colorAccent" />

</RelativeLayout>
